Fix <body> shrinking on mobile widths
Change the font sizes in the footer to avoid
tight space and overflowing

--- a/style.css
+++ b/style.css
@@ -347,5 +347,14 @@ footer p {
     width: 85%;
   }
 
+  .footer-addInfo {
+    gap: 0;
+    font-size: .1em;
+  }
+
+  footer p {
+    font-size: .5em;
+  }
+
 
 }
